classDiagram
    class InputHandler {
        +validate(args)
    }
    class Calculator {
        +andOp(a, b)
        +orOp(a, b)
        +xorOp(a, b)
        +notOp(a)
    }
    class Converter {
        +toBinary(n)
        +toHex(n)
    }
    class OutputHandler {
        +displayResults(a, b, calculator, converter)
    }
    class CLI {
        +run(args)
    }
    CLI "1" --> "1" InputHandler
    CLI "1" --> "1" Calculator
    CLI "1" --> "1" Converter
    CLI "1" --> "1" OutputHandler